--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -59,7 +59,8 @@
     "|[NSGA-III](nsga3.ipynb)|\"NSGA3\"|\"nsga3\"\n",
     "|[UNSGA-III](unsga3.ipynb)|\"UNSGA3\"|\"unsga3\"\n",
     "|[RNSGA-III](rnsga3.ipynb)|\"RNSGA3\"|\"rnsga3\"\n",
-    "|[MOEA/D](moead.ipynb)|\"MOEAD\"|\"moead\"\n"
+    "|[MOEA/D](moead.ipynb)|\"MOEAD\"|\"moead\"\n",
+    "|[C-TAEA](ctaea.ipynb)|\"CTAEA\"|\"ctaea\"\n"
    ]
   },
   {
