--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -495,3 +495,17 @@ numpages = {18}
 }
 
 
+@article{ctaea,
+  title = {Two-{{Archive Evolutionary Algorithm}} for {{Constrained Multiobjective Optimization}}},
+  author = {Li, Ke and Chen, Renzhi and Fu, Guangtao and Yao, Xin},
+  year = {2019},
+  month = apr,
+  volume = {23},
+  pages = {303--315},
+  issn = {1941-0026},
+  doi = {10.1109/TEVC.2018.2855411},
+  abstract = {When solving constrained multiobjective optimization problems, an important issue is how to balance convergence, diversity, and feasibility simultaneously. To address this issue, this paper proposes a parameter-free constraint handling technique, a two-archive evolutionary algorithm, for constrained multiobjective optimization. It maintains two collaborative archives simultaneously: one, denoted as the convergence-oriented archive (CA), is the driving force to push the population toward the Pareto front; the other one, denoted as the diversity-oriented archive (DA), mainly tends to maintain the population diversity. In particular, to complement the behavior of the CA and provide as much diversified information as possible, the DA aims at exploring areas under-exploited by the CA including the infeasible regions. To leverage the complementary effects of both archives, we develop a restricted mating selection mechanism that adaptively chooses appropriate mating parents from them according to their evolution status. Comprehensive experiments on a series of benchmark problems and a real-world case study fully demonstrate the competitiveness of our proposed algorithm, in comparison to five state-of-the-art constrained evolutionary multiobjective optimizers.},
+  journal = {IEEE Transactions on Evolutionary Computation},
+  keywords = {constrained evolutionary multiobjective optimizers,Constraint handling,convergence,Convergence,convergence-oriented archive,decomposition-based technique,diversity-oriented archive,evolutionary algorithm (EA),evolutionary computation,Evolutionary computation,infeasible regions,Linear programming,multiobjective optimization,multiobjective optimization problems,Optimization,parameter-free constraint handling technique,Pareto front,Pareto optimisation,population diversity,restricted mating selection mechanism,Sociology,Sorting,Statistics,two-archive evolutionary algorithm,two-archive strategy},
+  number = {2}
+}
