Document DAS-CMOP and MW

--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -509,3 +509,30 @@ numpages = {18}
   keywords = {constrained evolutionary multiobjective optimizers,Constraint handling,convergence,Convergence,convergence-oriented archive,decomposition-based technique,diversity-oriented archive,evolutionary algorithm (EA),evolutionary computation,Evolutionary computation,infeasible regions,Linear programming,multiobjective optimization,multiobjective optimization problems,Optimization,parameter-free constraint handling technique,Pareto front,Pareto optimisation,population diversity,restricted mating selection mechanism,Sociology,Sorting,Statistics,two-archive evolutionary algorithm,two-archive strategy},
   number = {2}
 }
+
+@article{dascmop,
+  title = {Difficulty {{Adjustable}} and {{Scalable Constrained Multiobjective Test Problem Toolkit}}},
+  author = {Fan, Zhun and Li, Wenji and Cai, Xinye and Li, Hui and Wei, Caimin and Zhang, Qingfu and Deb, Kalyanmoy and Goodman, Erik},
+  year = {2019},
+  month = may,
+  pages = {1--40},
+  publisher = {{MIT Press}},
+  issn = {1063-6560},
+  doi = {10.1162/evco_a_00259},
+  journal = {Evolutionary Computation}
+}
+
+@article{mw,
+  title = {Evolutionary {{Constrained Multiobjective Optimization}}: {{Test Suite Construction}} and {{Performance Comparisons}}},
+  shorttitle = {Evolutionary {{Constrained Multiobjective Optimization}}},
+  author = {Ma, Zhongwei and Wang, Yong},
+  year = {2019},
+  month = dec,
+  volume = {23},
+  pages = {972--986},
+  issn = {1941-0026},
+  doi = {10.1109/TEVC.2019.2896967},
+  abstract = {For solving constrained multiobjective optimization problems (CMOPs), many algorithms have been proposed in the evolutionary computation research community for the past two decades. Generally, the effectiveness of an algorithm for CMOPs is evaluated by artificial test problems. However, after a brief review of current artificial test problems, we have found that they are not well-designed and fail to reflect the characteristics of real-world applications (e.g., small feasibility ratio). Thus, in this paper, we first propose a new constraint construction method to facilitate the systematic design of test problems. Then, on the basis of this method, we design a new test suite consisting of 14 instances, which covers diverse characteristics extracted from real-world CMOPs and can be divided into four types. Considering that the comprehensive performance comparisons among the constraint-handling techniques (CHTs) remain scarce, we choose several representative CHTs and compare their performance on our test suite. The performance comparisons identify the strengths and weaknesses of different CHTs on different types of CMOPs and provide guidelines on how to select/design a CHT in a specific scenario.},
+  journal = {IEEE Transactions on Evolutionary Computation},
+  number = {6}
+}
