Reviewed Permutation Operators, TSP and Flowshop. Also, added unit tests.

--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -30,6 +30,7 @@
     "   unsga3\n",
     "   rnsga3\n",
     "   moead\n",
+    "   ctaea\n",
     "   brkga\n"
    ]
   },
@@ -112,10 +113,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
