--- a/doc/source/getting_started.ipynb
+++ b/doc/source/getting_started.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".. meta::\n",
+    "   :description: A guide which introduces the most important steps to get started with pymoo, an open-source multi-objective optimization framework in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".. meta::\n",
+    "   :keywords: Multi-objective Optimization, Python, Evolutionary Computation, Optimization Test Problem, Hypervolume"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
