--- a/doc/source/versions.ipynb
+++ b/doc/source/versions.ipynb
@@ -22,6 +22,25 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
+    ".. _version_0_4_2:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0.4.2\n",
+    "\n",
+    "- New Test Problems Suites (Constrained): DAS-CMOP and MW (contributed by cyrilpic)\n",
+    "- New Operators for Permutations: OrderCrossover and InversionMutation and a usage to optimize routes for the TSP and Flowshop problem (contributed by Peng-YM )\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
     ".. _version_0_4_1:"
    ]
   },
@@ -200,10 +219,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
