--- a/doc/source/misc/index.ipynb
+++ b/doc/source/misc/index.ipynb
@@ -35,6 +35,7 @@
     "   \n",
     "   reference_directions.ipynb\n",
     "   constraint_handling.ipynb\n",
+    "   convergence.ipynb\n",
     "   decomposition.ipynb\n",
     "   kktpm.ipynb\n",
     "   \n",
@@ -58,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
