--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -171,7 +171,16 @@
     "|[DTLZ7](many/dtlz.ipynb#dtlz7)||\n",
     "|DTLZ1^-1||\n",
     "|Scaled DTLZ||\n",
-    "|Convex DTLZ||"
+    "|Convex DTLZ||\n",
+    "|WFG1||\n",
+    "|WFG2||\n",
+    "|WFG3||\n",
+    "|WFG4||\n",
+    "|WFG5||\n",
+    "|WFG6||\n",
+    "|WFG7||\n",
+    "|WFG8||\n",
+    "|WFG9||"
    ]
   },
   {
@@ -498,15 +507,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
