Added support for constraint handling during the survival PSO documentation Constraint handling via ieq and eq functions

--- a/doc/source/algorithms/nsga2.ipynb
+++ b/doc/source/algorithms/nsga2.ipynb
@@ -13,7 +13,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NSGA-II"
+    ".. meta::\n",
+    "   :description: An implementation of the famous NSGA-II (also known as NSGA2) algorithm to solve multi-objective optimization problems. The non-dominated rank and crowding distance is used to introduce diversity in the objective space in each generation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".. meta::\n",
+    "   :keywords: NSGA2, NSGA-II, Non-Dominated Sorting, Multi-objective Optimization, Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NSGA-II"
    ]
   },
   {
@@ -204,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
