--- a/doc/source/algorithms/nsga3.ipynb
+++ b/doc/source/algorithms/nsga3.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NSGA-III\n",
+    "# NSGA-III\n",
     "\n",
     "\n",
     "The algorithm is implemented in base of <cite data-cite=\"nsga3-part1\"></cite> <cite data-cite=\"nsga3-part2\"></cite> [\\[benchmark\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.html) [\\[data\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.zip). Implementation details of this algorithm can be found in <cite data-cite=\"nsga3-norm\"></cite>. NSGA-III is based on [Reference Directions](../misc/reference_directions.ipynb) which need to be provided when the algorithm is initialized. \n",
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
