--- a/doc/source/operators/index.ipynb
+++ b/doc/source/operators/index.ipynb
@@ -49,7 +49,8 @@
     "|Name|Convenience|\n",
     "|---|---|\n",
     "|[Random](sampling.ipynb)|\"(real\\|int\\|real)_random\"|\n",
-    "|[Latin Hypercube Sampling](sampling.ipynb)|\"real_lhs\"|"
+    "|[Latin Hypercube Sampling](sampling.ipynb)|\"real_lhs\"|\n",
+    "|[Random Permutation Sampling](sampling.ipynb)|\"perm_random\"|"
    ]
   },
   {
@@ -83,7 +84,8 @@
     "|Name|Convenience|\n",
     "|---|---|\n",
     "|[Polynomial](mutation.ipynb)|\"(real\\|int)_pm\"|\n",
-    "|[Bitflip](mutation.ipynb)|\"bin_bitflip\"|"
+    "|[Bitflip](mutation.ipynb)|\"bin_bitflip\"|\n",
+    "|[Inverse Mutation](mutation.ipynb)|\"perm_inv\"|"
    ]
   },
   {
@@ -106,7 +108,9 @@
     "|[One Point](crossover.ipynb)|\"(real\\|int\\|real)_one_point\"|\n",
     "|[Two Point](crossover.ipynb)|\"(real\\|int\\|real)_two_point\"|\n",
     "|[K Point](crossover.ipynb)|\"(real\\|int\\|real)_k_point\"|\n",
-    "|[Exponential](crossover.ipynb)|\"(real\\|bin\\|int)_exp\"|"
+    "|[Exponential](crossover.ipynb)|\"(real\\|bin\\|int)_exp\"|\n",
+    "|[Order Crossover](crossover.ipynb)|\"perm_ox\"|\n",
+    "|[Edge Recombination Crossover](crossover.ipynb)|\"perm_erx\"|"
    ]
   }
  ],
@@ -131,10 +135,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
