--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -536,3 +536,22 @@ numpages = {18}
   journal = {IEEE Transactions on Evolutionary Computation},
   number = {6}
 }
+
+
+@INPROCEEDINGS{pso,
+author={J. {Kennedy} and R. {Eberhart}},
+booktitle={Proceedings of ICNN'95 - International Conference on Neural Networks},
+title={Particle swarm optimization},
+year={1995},
+volume={4},
+number={},
+pages={1942-1948 vol.4},}
+
+@ARTICLE{pso_adapative,
+  author={Z. {Zhan} and J. {Zhang} and Y. {Li} and H. S. {Chung}},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics, Part B (Cybernetics)},
+  title={Adaptive Particle Swarm Optimization},
+  year={2009},
+  volume={39},
+  number={6},
+  pages={1362-1381},}
