--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -22,6 +22,7 @@
     "   differential_evolution\n",
     "   genetic_algorithm\n",
     "   nelder_mead\n",
+    "   pso\n",
     "   pattern_search\n",
     "   cmaes\n",
     "   nsga2\n",
@@ -108,15 +109,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
