FunctionProblem and Documentation

--- a/doc/source/problems/custom.ipynb
+++ b/doc/source/problems/custom.ipynb
@@ -29,12 +29,15 @@
    "source": [
     "### By Class\n",
     "\n",
-    "An optimization problem can be defined by inheriting from the *Problem* class. In the following the definition of a simple optimization problem with **one** objective and **two** constraints is considered. The problem has two constants, *const_1* and *const_2* which can be modified by initiating the problem with different parameters. By default, it consists of 10 variable and the lower and upper bounds are within $[-5, 5]$ for all variables. "
+    "A very detailed description of defining a problem through a class is already provided in the [Getting Started Guide](../getting_started.ipynb).\n",
+    "In the following the definition of a simple optimization problem with **one** objective and **two** constraints is considered. The problem has two constants, *const_1* and *const_2* which can be modified by initiating the problem with different parameters. By default, it consists of 10 variable and the lower and upper bounds are within $[-5, 5]$ for all variables. \n",
+    "\n",
+    "**Note**: The example below uses the `autograd` library which allows to calculate the gradients through automatic differentiation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +73,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After creating a problem object the evaluate function can be called. The *return_values_of* variable can be overwritten to modify the list of returned parameters. "
+    "After creating a problem object the evaluate function can be called. The *return_values_of* variable can be overwritten to modify the list of returned parameters. The gradients for the objectives `dF` and constraints `dG` can be obtained as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "problem = MyProblem()\n",
-    "F, G, CV, feasible, dF, dG = problem.evaluate(anp.random.rand(100, 10),\n",
+    "F, G, CV, feasible, dF, dG = problem.evaluate(np.random.rand(100, 10),\n",
     "                                              return_values_of=[\"F\", \"G\", \"CV\", \"feasible\", \"dF\", \"dG\"])\n"
    ]
   },
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "code": "usage_problem.py",
     "section": "from_string"
@@ -161,31 +164,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objs = [\n",
+    "    lambda x: np.sum((x - 2) ** 2),\n",
+    "    lambda x: np.sum((x + 2) ** 2)\n",
+    "]\n",
+    "\n",
+    "constr_ieq = [\n",
+    "    lambda x: np.sum((x - 1) ** 2)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from pymoo.model.problem import get_problem_from_func\n",
+    "from pymoo.model.problem import FunctionalProblem\n",
     "\n",
-    "def my_evaluate_func(x, out, *args, **kwargs):\n",
+    "problem = FunctionalProblem(10,\n",
+    "                            objs,\n",
+    "                            constr_ieq=constr_ieq,\n",
+    "                            xl=np.array([-10, -5, -10]),\n",
+    "                            xu=np.array([10, 5, 10])\n",
+    "                            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F: [[21.50433366 65.09737388]\n",
+      " [20.33935753 68.04428443]\n",
+      " [19.10223474 69.89511712]]\n",
+      "\n",
+      "CV: [[2.40259372]\n",
+      " [2.26558926]\n",
+      " [1.80045534]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "F, CV = problem.evaluate(np.random.rand(3, 10))\n",
     "\n",
-    "    # define the objective as x^2\n",
-    "    f1 = np.sum(np.square(x - 2), axis=1)\n",
-    "    f2 = np.sum(np.square(x + 2), axis=1)\n",
-    "    out[\"F\"] = np.column_stack([f1, f2])\n",
-    "\n",
-    "    # x^2 < 2 constraint\n",
-    "    out[\"G\"] = np.sum(np.square(x - 1), axis=1)\n",
-    "\n",
-    "\n",
-    "# load the problem from a function - define 3 variables with the same lower bound\n",
-    "problem = get_problem_from_func(my_evaluate_func, xl=-10, xu=10, n_var=3)\n",
-    "F, CV = problem.evaluate(np.random.rand(100, 3))\n",
-    "\n",
-    "# or define a problem with varying lower and upper bounds\n",
-    "problem = get_problem_from_func(my_evaluate_func, xl=np.array([-10, -5, -10]), xu=np.array([10, 5, 10]))\n",
-    "F, CV = problem.evaluate(np.random.rand(100, 3))"
+    "print(f\"F: {F}\\n\")\n",
+    "print(f\"CV: {CV}\")"
    ]
   },
   {
