--- a/doc/source/misc/constraint_handling.ipynb
+++ b/doc/source/misc/constraint_handling.ipynb
@@ -34,6 +34,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV: 11.702043704986334\n",
+      "F: 5625.439521191143\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymoo.algorithms.so_genetic_algorithm import GA\n",
+    "from pymoo.factory import get_problem\n",
+    "from pymoo.optimize import minimize\n",
+    "\n",
+    "res = minimize(get_problem(\"g05\"),\n",
+    "               GA(),\n",
+    "               return_least_infeasible=True,\n",
+    "               seed=1,\n",
+    "               verbose=False)\n",
+    "\n",
+    "print(\"CV:\", res.CV[0])\n",
+    "print(\"F:\", res.F[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
