--- a/doc/source/problems/custom.ipynb
+++ b/doc/source/problems/custom.ipynb
@@ -102,12 +102,12 @@
    "source": [
     "**Elementwise Evaluation**\n",
     "\n",
-    "If the problem can not be executed by using matrix operations a serialized evaluation can be indicated by using the *elementwise_evaluation* flag. If *true*, then an outer loop is already implemented an *x* is just one individual."
+    "If the problem can not be executed by using matrix operations a serialized evaluation can be indicated by using the `elementwise_evaluation=True` flag. If the flag is set then an outer loop is already implemented an `x` is only an **one** dimensional array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,65 @@
     "\n",
     "    def _evaluate(self, x, out, *args, **kwargs):\n",
     "        out[\"F\"] = x.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### By Function\n",
+    "\n",
+    "Another way of defining a problem is through functions. One the one hand many function calls need to be performed to evaluated a set of solutions, but on the other hand it is a very intuitive way of defining a problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "code": "usage_problem.py",
+    "section": "from_function"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F: [[21.42584785 66.09631176]\n",
+      " [26.97585042 57.6450503 ]\n",
+      " [21.50184569 65.41885629]]\n",
+      "\n",
+      "CV: [[2.59346383]\n",
+      " [4.64315039]\n",
+      " [2.48109834]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from pymoo.model.problem import FunctionalProblem\n",
+    "\n",
+    "\n",
+    "objs = [\n",
+    "    lambda x: np.sum((x - 2) ** 2),\n",
+    "    lambda x: np.sum((x + 2) ** 2)\n",
+    "]\n",
+    "\n",
+    "constr_ieq = [\n",
+    "    lambda x: np.sum((x - 1) ** 2)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "problem = FunctionalProblem(10,\n",
+    "                            objs,\n",
+    "                            constr_ieq=constr_ieq,\n",
+    "                            xl=np.array([-10, -5, -10]),\n",
+    "                            xu=np.array([10, 5, 10])\n",
+    "                            )\n",
+    "\n",
+    "F, CV = problem.evaluate(np.random.rand(3, 10))\n",
+    "\n",
+    "print(f\"F: {F}\\n\")\n",
+    "print(f\"CV: {CV}\")"
    ]
   },
   {
@@ -150,75 +209,6 @@
     "\n",
     "# also input parameter can be provided directly\n",
     "p = get_problem(\"dtlz1_-1\", n_var=20, n_obj=5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### By Function\n",
-    "\n",
-    "We recommend defining a problem by class because this provides you all the functionalities provided by the framework, such as implementing the pareto_front function or variable types and many more.\n",
-    "However, many frameworks define a problem just by a function which is also supported in *pymoo* by the get_problem_from_func which takes the evaluation function and optional the boundaries as an input."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objs = [\n",
-    "    lambda x: np.sum((x - 2) ** 2),\n",
-    "    lambda x: np.sum((x + 2) ** 2)\n",
-    "]\n",
-    "\n",
-    "constr_ieq = [\n",
-    "    lambda x: np.sum((x - 1) ** 2)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pymoo.model.problem import FunctionalProblem\n",
-    "\n",
-    "problem = FunctionalProblem(10,\n",
-    "                            objs,\n",
-    "                            constr_ieq=constr_ieq,\n",
-    "                            xl=np.array([-10, -5, -10]),\n",
-    "                            xu=np.array([10, 5, 10])\n",
-    "                            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F: [[21.50433366 65.09737388]\n",
-      " [20.33935753 68.04428443]\n",
-      " [19.10223474 69.89511712]]\n",
-      "\n",
-      "CV: [[2.40259372]\n",
-      " [2.26558926]\n",
-      " [1.80045534]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "F, CV = problem.evaluate(np.random.rand(3, 10))\n",
-    "\n",
-    "print(f\"F: {F}\\n\")\n",
-    "print(f\"CV: {CV}\")"
    ]
   },
   {
