Replace NaN by inf

--- a/doc/source/getting_started.ipynb
+++ b/doc/source/getting_started.ipynb
@@ -303,31 +303,9 @@
    "source": [
     "The definition by functions is a very common way in Python and available and many other optimization frameworks. It reduces the definitions of a problem without any overhead and the number of objectives and constraints is simply derived from the list of functions.\n",
     "\n",
-    "**Note**: This definition is recommended to be used for the ease of defining a problem through simple functions. It is worth noting that the evaluation can require many functions calls. For instance, for 100 individuals with 2 objectives and 2 constraints 400 function calls are necessary for evaluation. Whereas, a definition through a class directly requires only a single function call. Moreover, if metrics are shared between objectives or constraints they need to be calculated twice."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objs = [\n",
-    "    lambda x: x[0]**2 + x[1]**2,\n",
-    "    lambda x: (x[0]-1)**2 + x[1]**2\n",
-    "]\n",
+    "After having defined the functions, the problem object is created by initializing `FunctionalProblem`. Please note that the number of variables has to be passed as an argument (here 2) because the lists are not already providing this information.\n",
     "\n",
-    "constr_ieq = [\n",
-    "    lambda x: 2*(x[0]-0.1) * (x[0]-0.9) / 0.18,\n",
-    "    lambda x: - 20*(x[0]-0.4) * (x[0]-0.6) / 4.8\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The problem object is then created by initializing `FunctionalProblem`. Please note that the number of variables has to be passed as an argument (here 2) because the lists are not already providing this information."
+    "**Note**: This definition is recommended to be used for the ease of defining a problem through simple functions. It is worth noting that the evaluation can require many functions calls. For instance, for 100 individuals with 2 objectives and 2 constraints 400 function calls are necessary for evaluation. Whereas, a definition through a class directly requires only a single function call. Moreover, if metrics are shared between objectives or constraints they need to be calculated twice."
    ]
   },
   {
@@ -338,11 +316,21 @@
    "source": [
     "from pymoo.model.problem import FunctionalProblem\n",
     "\n",
+    "objs = [\n",
+    "    lambda x: x[0]**2 + x[1]**2,\n",
+    "    lambda x: (x[0]-1)**2 + x[1]**2\n",
+    "]\n",
+    "\n",
+    "constr_ieq = [\n",
+    "    lambda x: 2*(x[0]-0.1) * (x[0]-0.9) / 0.18,\n",
+    "    lambda x: - 20*(x[0]-0.4) * (x[0]-0.6) / 4.8\n",
+    "]\n",
+    "\n",
     "problem_by_func = FunctionalProblem(2, \n",
     "                                    objs, \n",
     "                                    constr_ieq=constr_ieq, \n",
     "                                    xl=np.array([-2,-2]), \n",
-    "                                    xu=np.array([2,2]))"
+    "                                    xu=np.array([2,2]))\n"
    ]
   },
   {
